kubernetes-aws/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/aline-financial-default: "true"
        io.kompose.service: gateway
    spec:
      containers:
        - image: 590184030834.dkr.ecr.us-east-1.amazonaws.com/gateway-tc:v3
          name: gateway
          ports:
            - containerPort: 8080
      restartPolicy: Always
