kubernetes-aws/landing-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: landing-portal
  name: landing-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: landing-portal
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/aline-financial-default: "true"
        io.kompose.service: landing-portal
    spec:
      containers:
        - image: 590184030834.dkr.ecr.us-east-1.amazonaws.com/landing-portal-tc:v2
          name: landing-portal
          ports:
            - containerPort: 80
      restartPolicy: Always
