kubernetes-aws/transaction-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: transaction-microservice
  name: transaction-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: transaction-microservice
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/aline-financial-default: "true"
        io.kompose.service: transaction-microservice
    spec:
      containers:
        - image: 590184030834.dkr.ecr.us-east-1.amazonaws.com/transaction-microservice-tc:latest
          name: transaction-microservice
          ports:
            - containerPort: 8073
      restartPolicy: Always
