kubernetes-aws/account-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: account-microservice
  name: account-microservice
spec:
  ports:
    - port: 8072
      targetPort: 8072
  selector:
    io.kompose.service: account-microservice
