kubernetes-aws/admin-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: admin-portal
  name: admin-portal
spec:
  ports:
    - port: 3007
      targetPort: 80
  selector:
    io.kompose.service: admin-portal
