kubernetes-aws/bank-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: bank-microservice
  name: bank-microservice
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    io.kompose.service: bank-microservice
