kubernetes-aws/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: gateway
