kubernetes-aws/member-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: member-dashboard
  name: member-dashboard
spec:
  ports:
    - port: 4200
      targetPort: 80
  selector:
    io.kompose.service: member-dashboard
