kubernetes-aws/transaction-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: transaction-microservice
  name: transaction-microservice
spec:
  ports:
    - port: 8073
      targetPort: 8073
  selector:
    io.kompose.service: transaction-microservice
