kubernetes-aws/underwriter-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: underwriter-microservice
  name: underwriter-microservice
spec:
  ports:
    - port: 8071
      targetPort: 8071
  selector:
    io.kompose.service: underwriter-microservice
