kubernetes-aws/services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
 
spec:
  rules:
    - host: <INSERT_LOAD_BALANCER_URL_HERE>
      http:
        paths:
          - path: /api/*
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /user-microservice/*
            pathType: Prefix
            backend:
              service:
                name: user-microservice
                port:
                  number: 8070
          - path: /member(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: member-dashboard
                port:
                  number: 80
          - path: /admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-portal
                port:
                  number: 80
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: landing-portal
                port:
                  number: 80
